Enhance SubscriptionWebSocketClient and add WebSocket tests
- Add JavaDoc comments to all methods in SubscriptionWebSocketClient
- Implement WebSocket tests for account subscriptions
- Add support for multiple simultaneous subscriptions
- Improve error handling and logging in WebSocket client
- Update logging levels to use DEBUG (FINE) for detailed messages